--- a/src/MLBlazorRCL/MainView/Main.razor
+++ b/src/MLBlazorRCL/MainView/Main.razor
@@ -6,9 +6,9 @@
 @attribute [Authorize]
 @using ITVisions.Blazor
 @using ITVisions.Blazor.Controls
-@using Microsoft.AspNetCore.SignalR.Client;
-@using BlazorContextMenu;
-@using MLBlazorRCL.MainView;
+@using Microsoft.AspNetCore.SignalR.Client
+@using BlazorContextMenu
+@using MLBlazorRCL.MainView
 
 <div class="row">
 
