--- a/src/MLBlazorRCL/MainView/TaskEdit.razor
+++ b/src/MLBlazorRCL/MainView/TaskEdit.razor
@@ -3,6 +3,7 @@
 @using BO
 @using Microsoft.AspNetCore.Components.Forms
 @using Blazored.FluentValidation @*Install-Package Blazored.FluentValidation*@
+@using MLBlazorRCL.MainView
 
 @if (Task != null)
 {
