Hinweis auf File-Cleanup

--- a/src/MLBlazorRCL/Files/FilesFromFilesystem.razor
+++ b/src/MLBlazorRCL/Files/FilesFromFilesystem.razor
@@ -4,7 +4,7 @@
 @using ITVisions;
 
 @*-------------------- Liste der Dateien*@
-<label>Dateien</label>
+<label>Dateien <span class="glyphicon glyphicon-info-sign" title="Dateien werden in diesem Demo-System spätestens nach 10 Tagen automatisch gelöscht!" aria-hidden="true"></span></label>
 @if (files != null && files.Count > 0)
 {
  <ul class="list-group">
