Log-Ausgabe verbessert

--- a/src/MLBlazorRCL/Files/FilesFromWebservice.razor
+++ b/src/MLBlazorRCL/Files/FilesFromWebservice.razor
@@ -2,7 +2,7 @@
 @using System.Globalization
 
 @*-------------------- Liste der Dateien*@
-<label>Dateien <span class="glyphicon glyphicon-info-sign" title="Dateien werden in diesem Demo-System spätestens nach 10 Tagen gelöscht!" aria-hidden="true"></span></label>
+<label>Dateien <span class="glyphicon glyphicon-info-sign" title="Dateien werden in diesem Demo-System spätestens nach 10 Tagen automatisch gelöscht!" aria-hidden="true"></span></label>
 @if (files != null && files.Count > 0)
 {
  <ul class="list-group">
