--- a/src/MLBlazorRCL/MainView/TaskElement.razor
+++ b/src/MLBlazorRCL/MainView/TaskElement.razor
@@ -38,8 +38,8 @@
 <ContextMenu Id="@("TaskContextMenu" + Task.CategoryID.ToString() + "_" + Task.TaskID.ToString())">
  <Item OnClick="@OnContextAbout"><span class="glyphicon glyphicon-zoom-in"></span>  Details zu dieser Aufgabe</Item>
  <Seperator />
- <Item OnClick="@OnContextEdit"><span class="glyphicon glyphicon-pencil"></span> Bearbeiten</Item>
- <Item OnClick="@OnContextRemove"> <span class="glyphicon glyphicon-arrow-left"></span> Löschen</Item>
+ <Item OnClick="@OnContextEdit"><span class="glyphicon glyphicon-pencil"></span> Aufgabe bearbeiten</Item>
+ <Item OnClick="@OnContextRemove"> <span class="glyphicon glyphicon-arrow-left"></span> Aufgabe löschen</Item>
 </ContextMenu>
 
 @code {
