--- a/src/MLBlazorRCL/MainView/TaskElement.razor
+++ b/src/MLBlazorRCL/MainView/TaskElement.razor
@@ -39,7 +39,7 @@
  <Item OnClick="@OnContextAbout"><span class="glyphicon glyphicon-zoom-in"></span>  Details zu dieser Aufgabe</Item>
  <Seperator />
  <Item OnClick="@OnContextEdit"><span class="glyphicon glyphicon-pencil"></span> Aufgabe bearbeiten</Item>
- <Item OnClick="@OnContextRemove"> <span class="glyphicon glyphicon-arrow-left"></span> Aufgabe löschen</Item>
+ <Item OnClick="@OnContextRemove"> <span class="glyphicon glyphicon-remove"></span> Aufgabe löschen</Item>
 </ContextMenu>
 
 @code {
