Fix: Anzeige aktueller Benutzer auf großen und kleinen Displays nun gleich

--- a/src/MLBlazorRCL/Layout/MainLayout.razor
+++ b/src/MLBlazorRCL/Layout/MainLayout.razor
@@ -1,9 +1,9 @@
 ﻿@inherits LayoutComponentBase
-@inject NavigationManager NavigationManager
 @using ITVisions.Blazor
 @using ITVisions.Blazor.Controls
 @using MLBlazorRCL
 @inject BlazorUtil Util
+@inject NavigationManager NavigationManager
 
 @*Nicht ständig sichtbarer Toast / Einbindung für alle Unterkomponenten*@
 <BlazoredToasts Timeout="5" ShowProgressBar="true" Position="Blazored.Toast.Configuration.ToastPosition.BottomLeft" RemoveToastsOnNavigation="true" />
@@ -19,19 +19,7 @@
 
  <!-- ### Statusanzeige: Anzeige dieses Blocks oben nur auf großen Displays -->
  <div class="col-xs-6 col-lg-9 col-sm-7 col-md-8 hidden-xs" style="vertical-align: middle;margin-top:10px">
-  <AuthorizeView>
-   <Authorized>
-    <div class="HeadInfo">
-     <h4 class="HeadInfo" id="LoggedInUser">Benutzer: <b>@context.User.Identity.Name</b> <a href="/logout">Logout</a></h4>
-     <h4 class="HeadInfo">Angemeldet seit: <b>@GetLogInDateTime().Result</b> Screen: <b><span id="screenInfo">@screenInfo</span></b> </h4>
-     <h4 class="HeadInfo" id="LoggedInUser">Frontend: Blazor @(Util.BlazorType) auf @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription</h4>
-     <h4 class="HeadInfo"><ConnectionState /></h4>
-    </div>
-   </Authorized>
-   <NotAuthorized>
-    @*<h4>You're not signed in</h4>*@
-   </NotAuthorized>
-  </AuthorizeView>
+  <CurrentUserDisplay></CurrentUserDisplay>
  </div>
 
  <!-- ### Hamburger-Menü rechts oben -->
@@ -85,18 +73,7 @@
  <!-- Alternative Anzeige dieses Blocks unten auf kleinen Displays (!!! Codedopplung, könnte man noch in eine Komponente auslagern !!!) -->
  <div class="row">
   <div class="col-xs-12 hidden-sm hidden-md hidden-lg" style="padding:0px;">
-  <AuthorizeView>
-   <Authorized>
-    <div class="HeadInfo">
-     <h4 class="HeadInfo" id="LoggedInUser">User: <b>@context.User.Identity.Name</b> <a href="/logout">Logout</a></h4>
-     <h4 class="HeadInfo">Logged in since: <b>@GetLogInDateTime().Result</b> Screen: <b><span id="screenInfo">@screenInfo</span></b> </h4>
-     <h4 class="HeadInfo"><ConnectionState /></h4>
-    </div>
-   </Authorized>
-   <NotAuthorized>
-    @*<h4>You're not signed in</h4>*@
-   </NotAuthorized>
-  </AuthorizeView>
+  <CurrentUserDisplay></CurrentUserDisplay>
   </div>
  </div>
 </div>
@@ -105,42 +82,30 @@
 {
  [CascadingParameter] private Task<AuthenticationState> authenticationStateTask { get; set; }
 
- protected override async System.Threading.Tasks.Task OnInitializedAsync() {
+ protected override async System.Threading.Tasks.Task OnInitializedAsync()
+ {
 
   // Setzt den Seitentitel für Browser-Registerkarte auf Projektnmame und Versionsnummer
   var entryAssemblyName = System.Reflection.Assembly.GetEntryAssembly().GetName();
   var projektname = entryAssemblyName.Name;
   await Util.SetTitle(projektname + " / v" + entryAssemblyName.Version.ToString());
 
-  // ermittelte den aktuellen Benu´tzer
+  // ermittelte den aktuellen Benutzer
   var authState = await authenticationStateTask;
   var user = authState.User;
-  if (user.Identity.IsAuthenticated) {
+  if (user.Identity.IsAuthenticated)
+  {
    Util.Log($"MainLayout: User {user.Identity.Name} is authenticated!");
   }
-  else {
+  else
+  {
    Util.Log("MainLayout: User is NOT authenticated.");
   }
  }
 
- public string screenInfo { get; set; }
-
- protected override async Task OnAfterRenderAsync(bool firstRender) {
-  if (firstRender) {
-   screenInfo = await Util.GetScreenSize();
-   await Util.InitUpdateScreenSize("screenInfo");
-   this.StateHasChanged();
-  }
- }
-
- async Task<string> GetLogInDateTime() {
-  var authState = await authenticationStateTask;
-  var user = authState.User;
-  if (user == null) return "???";
-  return user.Claims.FirstOrDefault(x => x.Type == "LogInDateTime")?.Value ?? "???";
- }
-
- public void ShowAbout() {
+ 
+ public void ShowAbout()
+ {
   // Navigiere zu /About und zurück zur Startseite, wenn auf das Logo geklickt wird
   if (NavigationManager.Uri.ToLower().Contains("/about")) NavigationManager.NavigateTo("/");
   else NavigationManager.NavigateTo("About");
