--- a/src/MLBlazorRCL/Layout/MainLayout.razor
+++ b/src/MLBlazorRCL/Layout/MainLayout.razor
@@ -19,7 +19,7 @@
 
  <!-- ### Statusanzeige: Anzeige dieses Blocks oben nur auf großen Displays -->
  <div class="col-xs-6 col-lg-9 col-sm-7 col-md-8 hidden-xs" style="vertical-align: middle;margin-top:10px">
-  <CurrentUserDisplay></CurrentUserDisplay>
+  <CurrentUser></CurrentUser>
  </div>
 
  <!-- ### Hamburger-Menü rechts oben -->
@@ -73,7 +73,7 @@
  <!-- Alternative Anzeige dieses Blocks unten auf kleinen Displays (!!! Codedopplung, könnte man noch in eine Komponente auslagern !!!) -->
  <div class="row">
   <div class="col-xs-12 hidden-sm hidden-md hidden-lg" style="padding:0px;">
-  <CurrentUserDisplay></CurrentUserDisplay>
+  <CurrentUser></CurrentUser>
   </div>
  </div>
 </div>
@@ -84,7 +84,6 @@
 
  protected override async System.Threading.Tasks.Task OnInitializedAsync()
  {
-
   // Setzt den Seitentitel für Browser-Registerkarte auf Projektnmame und Versionsnummer
   var entryAssemblyName = System.Reflection.Assembly.GetEntryAssembly().GetName();
   var projektname = entryAssemblyName.Name;
