--- a/src/MiracleList_MAUI/AppShell.xaml
+++ b/src/MiracleList_MAUI/AppShell.xaml
@@ -4,11 +4,17 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MiracleList_MAUI"
+    xmlns:views="clr-namespace:MiracleList_MAUI.Views"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
+    <!--<ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="MainPage" />-->
+
+    <ShellContent
+        Title="Kategorien"
+        ContentTemplate="{DataTemplate views:CategoriesPage}"
+        Route="CategoryPage" />
 
 </Shell>
