--- a/src/MiracleList_MAUI/Views/CategoriesPage.xaml
+++ b/src/MiracleList_MAUI/Views/CategoriesPage.xaml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:MiracleList_MAUI.ViewModels"
+             xmlns:bo="clr-namespace:BO;assembly=BO"
              x:Class="MiracleList_MAUI.Views.CategoriesPage"
+             x:DataType="vm:CategoriesPageViewModel"
              Title="CategoriesPage">
     <Grid RowDefinitions="auto, auto, *, auto">
-        <Label x:Name="HeaderLabel"/>
+        <Label Text="{Binding CategoryCount, StringFormat='{0} Kategorien'}"/>
         <Entry Grid.Row="1" Placeholder="Neue Kategorie ..."/>
-        <CollectionView x:Name="CategoriesCollectionView" Grid.Row="2">
+        <CollectionView Grid.Row="2" ItemsSource="{Binding Categories}">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="bo:Category">
                     <Grid ColumnDefinitions="*, auto">
                         <Label Text="{Binding Name}"/>
                         <Label Grid.Column="1" Text="X"/>
