Löschen von Kategorien unter .NET MAUI implementiert.
Demonstriert relatives Binden, TapGestureRecognizer und die Darstellung von Dialogen

--- a/src/MiracleList_MAUI/Views/CategoriesPage.xaml
+++ b/src/MiracleList_MAUI/Views/CategoriesPage.xaml
@@ -16,7 +16,12 @@
                 <DataTemplate x:DataType="bo:Category">
                     <Grid ColumnDefinitions="*, auto">
                         <Label Text="{Binding Name}"/>
-                        <Label Grid.Column="1" Text="X"/>
+                        <Label Grid.Column="1" Text="X">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:CategoriesPageViewModel}}, Path=DeleteCategoryCommand}"
+                                                      CommandParameter="{Binding .}"/>
+                            </Label.GestureRecognizers>
+                        </Label>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
