--- a/src/MiracleList_MAUI/Views/TasksPage.xaml
+++ b/src/MiracleList_MAUI/Views/TasksPage.xaml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:MiracleList_MAUI.Converters"
              xmlns:vm="clr-namespace:MiracleList_MAUI.ViewModels"
              xmlns:bo="clr-namespace:BO;assembly=BO"
                   x:DataType="vm:TasksPageViewModel"
              x:Class="MiracleList_MAUI.Views.TasksPage"
              Title="{Binding Category.Name}">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:TaskStatusConverter x:Key="TaskStatusConverter"/>
+            <converters:RelativeDateConverter x:Key="RelativeDateConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
         <VerticalStackLayout>
         <Label FontSize="20">
             <Label.FormattedText>
@@ -23,7 +30,7 @@
                     <Grid ColumnDefinitions="auto,*,auto,auto" RowDefinitions="auto,auto" ColumnSpacing="6" RowSpacing="6">
                         <Label Text="{Binding Title}" FontAttributes="Bold" LineBreakMode="WordWrap"/>
                         <Border Grid.Column="2" StrokeShape="RoundRectangle 45,45,45,45" StrokeThickness="0" BackgroundColor="{AppThemeBinding Light={StaticResource Gray500}, Dark={StaticResource Gray100}}"  >
-                            <Label Text="{Binding Importance}" Padding="2,10"
+                            <Label Text="{Binding Importance}" Padding="10,2"
                                    TextColor="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource Gray500}}"
                                    FontAttributes="Bold"/>
                         </Border>
@@ -32,7 +39,20 @@
                                 <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:TasksPageViewModel}}, Path=DeleteTaskCommand}"
                                                       CommandParameter="{Binding .}"/>
                             </Label.GestureRecognizers>
-                        </Label>                        
+                        </Label>
+                        <Label Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Text="Fällig">
+                            <Label.Triggers>
+                                <DataTrigger TargetType="Label" Binding="{Binding Due, Converter={StaticResource TaskStatusConverter}}" Value="overdue">
+                                    <Setter Property="TextColor" Value="Red"/>
+                                    <Setter Property="Text" Value="{Binding Due, Converter={StaticResource RelativeDateConverter}, StringFormat='Fällig seit {0:d}'}"/>
+                                </DataTrigger>
+                                <DataTrigger TargetType="Label" Binding="{Binding Due, Converter={StaticResource TaskStatusConverter}}" Value="open">
+                                    <Setter Property="TextColor" Value="DarkGreen"/>
+                                    <Setter Property="Text" Value="{Binding Due, StringFormat='Fällig am {0:d}'}"/>
+                                </DataTrigger>
+                            </Label.Triggers>
+                        </Label>
+
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
