--- a/src/MiracleList_MAUI/Views/TasksPage.xaml
+++ b/src/MiracleList_MAUI/Views/TasksPage.xaml
@@ -28,6 +28,10 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="bo:Task">
                     <Grid ColumnDefinitions="auto,*,auto,auto" RowDefinitions="auto,auto" ColumnSpacing="6" RowSpacing="6">
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:TasksPageViewModel}}, Path=NavigateToTaskCommand}"
+                                                      CommandParameter="{Binding .}"/>
+                        </Grid.GestureRecognizers>
                         <Label Text="{Binding Title}" FontAttributes="Bold" LineBreakMode="WordWrap"/>
                         <Border Grid.Column="2" StrokeShape="RoundRectangle 45,45,45,45" StrokeThickness="0" BackgroundColor="{AppThemeBinding Light={StaticResource Gray500}, Dark={StaticResource Gray100}}"  >
                             <Label Text="{Binding Importance}" Padding="10,2"
